Out of time.  Met two of three MVPs; unable to sign in or create a new fun fact.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Geography Nerd Login</title>
-<!-- Include CSS File Here -->
-<link rel="stylesheet" href="css/style.css"/>
-<!-- Include JS File Here -->
-<script src="js/login.js"></script>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="container">
-<div class="main">
-<h2>Geography Nerd Login </h2>
-<form id="form_id" method="post" name="myform">
-<label>User Name :</label>
-<input type="text" name="username" id="username"/>
-<label>Password :</label>
-<input type="password" name="password" id="password"/>
-<input type="button" value="Login" id="submit" onclick="validate"/>
-<br/>
-<span>Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : evilgeniusnyc <br/>Password : monkey123</b></span>
-</div>
-<button onclick="myFunction()"> Login Succsesful! <br/>Please click here for redirect.</button">
- 
+	<h1> Welcome, Geography Nerd!</h1>
+	<br/>
+	<div id="list-panel">
+		<ul id="list">
 
+		</ul>
+	</div>
+	<div id="show-panel"></div>
+	<script defer type="text/javascript" src="index.js"></script>
+
+	<div id="container">
+		<br />
+	</div>
+	<br/>
 </div>
+<br />
+</div>
+<!-- 
 </body>
+<footer>
+	<script defer type="text/javascript" src="show.js"></script>
+</footer> -->
 </html>
