--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="index.css">
+	<script defer type="text/javascript" src="index.js"></script>
 </head>
 <body>
 	<h1> Welcome, Geography Nerd!</h1>
@@ -13,20 +15,14 @@
 		<ul id="list">
 
 		</ul>
-	</div>
-	<div id="show-panel"></div>
-	<script defer type="text/javascript" src="index.js"></script>
 
-	<div id="container">
-		<br />
+	
 	</div>
-	<br/>
-</div>
-<br />
-</div>
-<!-- 
-</body>
-<footer>
-	<script defer type="text/javascript" src="show.js"></script>
-</footer> -->
+	<form id="form-funfact"> 
+		<input type="text" name="fun-fact"> 
+		<select id="countries"></select>
+		<input type="submit" value="submit">
+	</form>
 </html>
+	
+	
